[package]
name = "cloud-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
# uncomment for faster compiles (if your setup supports this)
# bevy = {version = "0.16.0", features = ["dynamic_linking", "wayland"]}
bytemuck = "1.23.1"
rand = "0.9.1"
bevy = {version = "0.16.0"}
#bevy_egui = "0.34.1"

# optimizations for dependencies, but not our code
[profile.dev.package."*"]
opt-level = 3
